Making PPA module work: 1) PPATypeVisitor and other visitors now operate on JavaElementLocations instead on JavaElements 2) Multiple fixed and refactorings making thing work